# financial-agent

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: agent.py  server.py  tools.py
